crates/internal/brink-intl/tests/snapshots/regenerate_snapshots__snapshot_empty_scope_survives.snap
---
source: crates/internal/brink-intl/tests/regenerate_snapshots.rs
expression: result
---
{
  "version": 1,
  "source_checksum": "0x00000002",
  "scopes": [
    {
      "name": "empty_knot",
      "id": "0x01",
      "lines": []
    }
  ]
}
