crates/internal/brink-intl/tests/snapshots/regenerate_snapshots__snapshot_insertion_and_deletion_net_zero.snap
---
source: crates/internal/brink-intl/tests/regenerate_snapshots.rs
expression: result
---
{
  "version": 1,
  "source_checksum": "0x00000002",
  "scopes": [
    {
      "name": "root",
      "id": "0x01",
      "lines": [
        {
          "index": 0,
          "content": "[TR] first",
          "hash": "aaa",
          "audio": "audio/1.wav"
        },
        {
          "index": 1,
          "content": "[TR] third",
          "hash": "ccc",
          "audio": "audio/3.wav"
        },
        {
          "index": 2,
          "hash": "ddd"
        }
      ]
    }
  ]
}
